apply plugin: 'java'
apply plugin: 'war'
compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}
compileJava.options.encoding = 'UTF-8'
javadoc.options.encoding = 'UTF-8'  

archivesBaseName = 'InMethodJakarta'
version = '3.2b2'


repositories {
   mavenCentral()
}


sourceSets {
    main {
        // where does the Java source code live?
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'src'
        }        

    }
}

dependencies {
   compile fileTree(dir: 'lib', include: ['*.jar'])
   compile fileTree(dir: 'lib/itext', include: ['*.jar'])
   compile fileTree(dir: 'lib/jasper_report', include: ['*.jar'])
   providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
}
